--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 		"start": "wmr",
 		"build": "wmr build --prerender",
 		"serve": "wmr serve",
-		"lint:fix": "eslint --fix --ext .js,.jsx ."
+		"lint:fix": "eslint --fix --ext .js,.jsx .",
+		"check": "npx prettier --check 'public/**/*.js'",
+		"format": "npx prettier --write 'public/**/*.js'"
 	},
 	"eslintConfig": {
 		"extends": "preact"
@@ -18,6 +20,7 @@
 		"preact-iso": "^0.2.0"
 	},
 	"devDependencies": {
+		"prettier": "2.2.1",
 		"typescript-plugin-css-modules": "^3.0.1",
 		"wmr": "^1.0.0"
 	}
