--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	"dependencies": {
 		"eslint": "^7.15.0",
 		"eslint-config-preact": "^1.1.3",
-		"preact-iso": "^0.2.0"
+		"preact-iso": "^0.2.0",
+		"react-simple-maps": "^2.3.0"
 	},
 	"devDependencies": {
 		"prettier": "2.2.1",
