--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"eslint": "^7.15.0",
 		"eslint-config-preact": "^1.1.3",
+		"preact": "^10.5.13",
 		"preact-iso": "^0.2.0",
 		"react-simple-maps": "^2.3.0"
 	},
